correction contraste

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-  color: rgba(255, 255, 255, 0.6);
+  color: #333333
 }
 
 .d-bloc .a-btn:hover,
@@ -157,7 +157,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-  color: rgba(255, 255, 255, 1);
+  color: #333333
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -701,7 +701,7 @@ p {
 
 .cta-hero {
   margin-top: 22px;
-  color: #ffffff !important;
+  color: #333333 !important;
   text-transform: uppercase;
   padding: 12px 28px 12px 28px;
   font-size: 16px;
@@ -742,6 +742,10 @@ h4 {
 .icons {
   margin-bottom: 14px;
   margin-top: 24px;
+}
+
+.black{
+  color: #333333  !important ;
 }
 
 .white {
@@ -789,12 +793,12 @@ h4 {
 
 .btn-atomic-tangerine {
   background: #f3976c;
-  color: #ffffff !important;
+  color: #333333 !important;
 }
 
 .btn-atomic-tangerine:hover {
   background: #c27956 !important;
-  color: #ffffff !important;
+  color: #333333 !important;
 }
 
 .ltc-white {
